{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 9,
  "lineage": "011b4df3-51dc-55b3-727f-719b448084e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpn_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d03e71aa609a9ffa",
            "arn": "arn:aws:ec2:us-east-2:986485678603:instance/i-009091af5272157b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009091af5272157b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudvpn-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043ad1679ece4d3a3",
            "private_dns": "ip-10-0-1-99.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.99",
            "public_dns": "ec2-18-117-83-33.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.83.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091a4a81a0a42a633",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0621f0a9ab914eb32",
            "tags": {
              "Name": "cloudvpn-server"
            },
            "tags_all": {
              "Name": "cloudvpn-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5c7484e388686cc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.vpn_key",
            "aws_security_group.vpn_sg",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpn_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986485678603:internet-gateway/igw-0234913c8535d790d",
            "id": "igw-0234913c8535d790d",
            "owner_id": "986485678603",
            "tags": {
              "Name": "cloudvpn-igw"
            },
            "tags_all": {
              "Name": "cloudvpn-igw"
            },
            "vpc_id": "vpc-084fbbdcfcf35e947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpn_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986485678603:route-table/rtb-0ac428dae433b7895",
            "id": "rtb-0ac428dae433b7895",
            "owner_id": "986485678603",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0234913c8535d790d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084fbbdcfcf35e947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpn_igw",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f540822b0b7d1b4",
            "route_table_id": "rtb-0ac428dae433b7895",
            "subnet_id": "subnet-0621f0a9ab914eb32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vpn_igw",
            "aws_route_table.vpn_rt",
            "aws_subnet.vpn_subnet",
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986485678603:security-group/sg-0c5c7484e388686cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5c7484e388686cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "cloudvpn-sg",
            "name_prefix": "",
            "owner_id": "986485678603",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudvpn-sg"
            },
            "tags_all": {
              "Name": "cloudvpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-084fbbdcfcf35e947"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986485678603:subnet/subnet-0621f0a9ab914eb32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0621f0a9ab914eb32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986485678603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudvpn-subnet"
            },
            "tags_all": {
              "Name": "cloudvpn-subnet"
            },
            "vpc_id": "vpc-084fbbdcfcf35e947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:986485678603:vpc/vpc-084fbbdcfcf35e947",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-0034e3423e55deb6e",
            "default_route_table_id": "rtb-0773521e1418a62ec",
            "default_security_group_id": "sg-0e9d69f3eb90189aa",
            "dhcp_options_id": "dopt-0d68f2d97b15b892f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084fbbdcfcf35e947",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0773521e1418a62ec",
            "owner_id": "986485678603",
            "tags": {
              "Name": "cloudvpn-vpc"
            },
            "tags_all": {
              "Name": "cloudvpn-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}